wrapping fix and diamond removal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -209,6 +209,14 @@ input, select, textarea {
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
 	}
+	
+	h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
+		width: auto;
+		overflow-wrap: break-word;
+	}
+	h3.major, h4.major, h5.major, h6.major {
+    display: inline-block;
+	}
 
 	h3 {
 		font-size: 1rem;
